-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
-
VMs + Lustre 2.14.55_43_g6a08df2
lhsmtool_posix
-
3
-
9223372036854775807
For an inactive HSM RESTORE request (not sent to a copytool), CANCEL action (or purge) only delete the record inside the llog but it does not unlock the MDS_INODELOCK_LAYOUT exclusive lock.
This causes an orphan EX lock on the fid.
Combined with the LU-15132, it could hang easily entirely a MDT.
- is related to
-
LU-15132 Parallel data accesses on a release file could hang a MDT
-
- Resolved
-